methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:2: error: not found: value False
  var vuBiscuit:Boolean = False
                          ^MethodsReturning:11: error: not found: value continuer
while(continuer){
      ^MethodsReturning:13: error: not found: value continuer
    continuer = false
    ^