methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit:Boolean = False
  vuBiscuit = estSurBiscuit()
  for (i <- 1 to 6){
    avance()
    vuBiscuit = estSurBiscuit()
  }
  return vuBiscuit
}

while(continuer){
	if (haveBaggle){
    continuer = false
  } else {
    droite()
    avance()
    gauche()
  }
}